--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bloccit</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-    <ul>
-        <li><%= link_to "Home", welcome_index_path %></li>
+  <head>
+    <title>Bloccit</title>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Bloccit", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
-    </ul>
+      </ul>
 
-<%= yield %>
+      <%= yield %>
+    </div>
 
-</body>
+  </body>
 </html>
+
