--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,14 @@
 <h1><%= @post.title %></h1>
 
-<% if policy(@post).edit? %>  
-  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <p><%= @post.body %></p>
+  </div>
+  <div class="col-md-4">
+    <% if policy(@post).edit? %>  
+      <%= link_to "Edit", edit_post_path(@topic,@post), class: 'btn btn-success' %>
+    <% end %>
+  </div>
+</div>
 
-<p><%= @post.body %></p>
+
