--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>  
-      <%= link_to "Edit", edit_post_path(@topic,@post), class: 'btn btn-success' %>
+      <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
     <% end %>
   </div>
 </div>
