--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Edit Post</h1>
+
 <div class="row">
   <div class="col-md-4">
     <p>Guidelines for posts</p>
@@ -9,18 +10,8 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for [@topic, @post] do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :body %>
-        <%= f.text_area :body, rows: 8, class: 'form-control' placeholder: "Enter post body" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+
+   <%= render partial: 'form', locals: { topic: @topic, post: @post } %>
+
   </div>
 </div>
