--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@topic, @post] do |f| %>
+<%= form_for [topic, post] do |f| %>
    <% if post.errors.any? %>
       <div class="alert alert-danger">
          <h4>There are <%= pluralize(post.errors.count, "error") %></h4>
