Added image to Post.

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,6 +11,7 @@
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
+            <div><%= image_tag(post.image.thumb.url) if post.image? %></div>
             <%= link_to (markdown post.title), [@topic, post] %>
           </h4>
             <small>
