--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,14 @@
-  <div>
+  <div class="media">
+    <%= link_to '#', class: 'pull-left' do %>
+      <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
+    <% end %>
+    <div class="media-body">
+      <small>
+        <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+        <% if policy(comment).destroy? %>
+        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+        <% end %>
+      </small>
       <p><%= comment.body %></p>
+    </div>
   </div>
