--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,16 +14,22 @@
     <% if policy(@post).edit? %>  
       <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
     <% end %>
+    <% if policy(@post).destroy? %>
+      <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
+      <% end  %>
   </div>
 
-  <div>
-    <%= render partial: "comments/form", locals: { topic: @topic, post: @post, comment: @comment } %>
+  <div class="row">
+    <div class="cold-md-8">
+      <%= render partial: "comments/form", locals: { topic: @topic, post: @post, comment: @comment } %>
+    </div>
   </div>
 
-
-  <div class="col-md-8">
-    <h5>Comments</h5>
-    <%= render partial: "comments/comment", collection: @comments, locals: { topic: @topic, post: @post } %>
+  <div class="row">
+    <div class="col-md-8">
+      <h5>Comments</h5>
+      <%= render partial: "comments/comment", collection: @comments, locals: { topic: @topic, post: @post } %>
+    </div>
   </div>
 </div>
 
