--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,7 @@
     <p class ="lead"><%= @topic.description %></p>
     <% @posts.each do |post| %>
       <div class="media">
+        <%= render partial: 'votes/voter', locals: {topic: @topic, post: post } %>
         <div class="media-body">
           <h4 class="media-heading">
             <div><%= image_tag(post.image.thumb.url) if post.image? %></div>
