--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-  <div class="media">
+  <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
     <%= link_to '#', class: 'pull-left' do %>
       <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
     <% end %>
@@ -12,3 +12,4 @@
       <p><%= comment.body %></p>
     </div>
   </div>
+<% end %>
