--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,6 +26,7 @@
             <%= pluralize(@post.down_votes, 'down vote') %>
           </small>
       </div>
+      <%= render partial: 'favorites/favorite', locals: { topic: @topic, post: @post } %>
     </div>
 </div>
 
