Interlude changes for registration, email permissions and styling

--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -1,7 +1,17 @@
 <% if policy(Vote.new).create? %>
   <div class="vote-arrows pull-left">
-    <div class><%= link_to " ", topic_post_up_vote_path(topic, post), class: 'glyphicon glyphicon-chevron-up' %></div>
-    <div><strong><%= post.points %></strong></div>
-    <div><%= link_to " ", topic_post_down_vote_path(topic, post), class: 'glyphicon glyphicon-chevron-down' %></div>
+    <div>
+      <%= link_to " ", 
+        topic_post_up_vote_path(topic, post), 
+        class: "glyphicon glyphicon-chevron-up #{(current_user.voted(post) && current_user.voted(post).up_vote?) ? 'voted' : '' }" %>
+    </div>
+    <div>
+      <strong><%= post.points %></strong>
+    </div>
+    <div>
+      <%= link_to " ", 
+        topic_post_down_vote_path(topic, post), 
+        class: "glyphicon glyphicon-chevron-down #{(current_user.voted(post) && current_user.voted(post).down_vote?) ? 'voted' : '' }" %>
+    </div>
   </div>
 <% end %>
