--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -51,6 +51,11 @@
           <%= f.file_field :avatar %>
           <%= f.hidden_field :avatar_cache %>
         </div>
+        <div class="form-group">
+          <%= f.label :email_favorites %>
+          <%= f/check_box :email_favorites %>
+          <p class="help-block">Be notified of new comments on your favorite posts.</p>
+        </div>
 
         <div class="form-group">
           <%= f.submit "Update", class: 'btn btn-success' %>
