--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,12 +1,12 @@
   <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
     <%= link_to '#', class: 'pull-left' do %>
       <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
-    <% end %>
+    <% end %> 
     <div class="media-body">
       <small>
         <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
         <% if policy(comment).destroy? %>
-        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+        | <%= link_to "Delete", comment_url_helper(comment), method: :delete %>
         <% end %>
       </small>
       <p><%= comment.body %></p>
