--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,14 @@
         <div class="pull-right user-info">
           <% if current_user %>
              <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
-              Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>!
+              Hello <%= link_to (current_user.name || current_user.email), current_user %>!
+              <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+                <span class="glyphicon glyphicon-user"></span>
+              <% end %>
+
+              <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+                <span class="glyphicon glyphicon-log-out"></span>
+              <% end %>
 
             <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
           <% else %>
