Created Popular Posts and Users, and optimized topics#show with eager loading.

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div class="media">
-  <%= render partial: 'votes/voter', local: { topic: post.topic, post: post } %>
+  <%= render partial: 'votes/voter', locals: { topic: post.topic, post: post } %>
   <%= link_to [post.topic, post], class: 'pull-left' do %>
     <%= image_tag(post.image.thumb.url) if post.image? %>
   <% end %>
