--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
       <ul class="nav nav-tabs">
         <li><%= link_to "Bloccit", root_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Topics", topics_path %></li>
+        <li><%= link_to "Popular", posts_path %></li>
+        <li><%= link_to "Users", users_path %></li>
 
         <div class="pull-right user-info">
           <% if current_user %>
