--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [topic, post, comment] do |f| %>
+<%= form_for [topic, post, comment], remote: true do |f| %>
 
    <h4>Submit your comment</h4>
    <div class="form-group">
